[package]
name = "transfer-sol"
version = "0.0.1"
description = "Solana Smart contract to transfer lamports from one account to another"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.8.1"

[dev-dependencies]
solana-program-test = "1.8.1"
solana-sdk = "1.8.1"

[lib]
name = "transfersol"
crate-type = ["cdylib", "lib"]
